--- a/index.html
+++ b/index.html
@@ -135,11 +135,11 @@
             <div class="project-card">
                 <div class="project-gallery">
                     <div class="slider" id="slider-bolz">
-                        <img src="image/Bolz MiniGame Poster.jpg" class="slide active" alt="Bolz">
-                        <img src="image/Bolz (4).png" class="slide" alt="Bolz">
-                        <img src="image/Bolz (3).png" class="slide" alt="Bolz">
-                        <img src="image/Bolz (2).png" class="slide" alt="Bolz">
-                        <img src="image/Bolz (1).png" class="slide" alt="Bolz">
+                        <img src="Image/" class="slide active" alt="Bolz">
+                        <img src="Image/Bolz (4).png" class="slide" alt="Bolz">
+                        <img src="Image/Bolz (3).png" class="slide" alt="Bolz">
+                        <img src="Image/Bolz (2).png" class="slide" alt="Bolz">
+                        <img src="Image/Bolz (1).png" class="slide" alt="Bolz">
                     </div>
                     <div class="slider-controls">
                         <button onclick="moveSlide('slider-bolz', -1)">Prev</button>
