--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
             <div class="project-card">
                 <div class="project-gallery">
                     <div class="slider" id="slider-bolz">
-                        <img src="Image/" class="slide active" alt="Bolz">
+                        <img src="Image/Bolz MiniGame Poster.jpg" class="slide active" alt="Bolz">
                         <img src="Image/Bolz (4).png" class="slide" alt="Bolz">
                         <img src="Image/Bolz (3).png" class="slide" alt="Bolz">
                         <img src="Image/Bolz (2).png" class="slide" alt="Bolz">
