--- a/index.html
+++ b/index.html
@@ -60,7 +60,8 @@
                     <h3>Saldang</h3> 
                     <p class="genre">2D Action Roguelike</p>
                     <p class="award">Won 2nd Place in Bicol Myth Game Jam (November 2025)</p>
-                    <p class="desc">I made the <strong>main gameplay systems</strong> and <strong>combat mechanics</strong> using C# and Unity. Developed the high-volume enemy spawning logic and wave management systems. The game has a "vampire-survivor" like style progression loop.</p>
+                    <p class="desc">I used C# and Unity to build the main gameplay and combat systems. I created the system that handles enemy waves and spawns large numbers of enemies at once.
+                         I also built a power-up system similar to 'Vampire Survivors' to make the game more exciting as you play.</p>
                     <p class="itch-link">itch.io: <a href="https://itch.io/jam/-mythic-bicol-game-jam-2025/rate/4003600" target="_blank">https://itch.io/saldang</a></p>
                 </div>
             </div>
