--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 <div class="project-info">
                     <h3>Saldang</h3> 
                     <p class="genre">2D Action Roguelike</p>
-                    <p class="award">Won 2nd Place in Bicol Myth Game Jam (November 2025)</p>
+                    <p class="award">Won 2nd Runner Up in Bicol Myth Game Jam (November 2025)</p>
                     <p class="desc">I used C# and Unity to build the main gameplay and combat systems. I created the system that handles enemy waves and spawns large numbers of enemies at once.
                          I also built a power-up system similar to 'Vampire Survivors' to make the game more exciting as you play.</p>
                     <p class="itch-link">itch.io: <a href="https://itch.io/jam/-mythic-bicol-game-jam-2025/rate/4003600" target="_blank">https://itch.io/saldang</a></p>
