--- a/index.html
+++ b/index.html
@@ -11,33 +11,36 @@
 
     <div class="portfolio-wrapper">
         <aside class="sidebar">
-            <div class="profile-section">
-                <img src="Image/Tesorero_Ivan.jpg" alt="Ivan L. Tesorero" class="profile-img">
-                <h1>Ivan L. Tesorero</h1> 
-                <p class="tagline">Game Programmer</p> 
-                <p class="bio">Passionate about creating games that offer <strong>fun</strong> and <strong>meaningful</strong> player experiences.</p>
-            </div>
+    <div class="profile-section">
+        <img src="Image/Tesorero_Ivan.jpg" alt="Ivan L. Tesorero" class="profile-img">
+        <h1>Ivan L. Tesorero</h1> 
+        <p class="tagline">Game Programmer</p> 
+        <p class="bio">Passionate about creating games that offer <strong>fun</strong> and <strong>meaningful</strong> player experiences.</p>
+    </div>
 
-            <div class="contact-info">
-                <h3>Contact</h3>
-                <p>📍 Calsada St. Mabolo, Naga City</p>
-                <p>📧 <a href="mailto:ivantesorero0@gmail.com">ivantesorero0@gmail.com</a></p>
-                <p>📞 +09937635110</p>
-            </div>
+    <div class="contact-info">
+        <h3>Contact</h3>
+        <p>📍 Naga City, Philippines</p>
+        <p>📧 <a href="mailto:ivantesorero0@gmail.com">ivantesorero0@gmail.com</a></p>
+        <p>📞 +09937635110</p>
+        <a href="path-to-your-cv.pdf" class="download-btn" download>
+            <span>📄 Download CV (PDF)</span>
+        </a>
+    </div>
 
-            <div class="sidebar-block">
-                <h3>Technical Skills</h3>
-                <p><strong>Languages:</strong> C#, C++, Java</p>
-                <p><strong>Tools:</strong> Unity, GitHub, Maya, Adobe Products, Visual Studio</p>
-            </div>
-
-            <div class="sidebar-block">
-                <h3>Education</h3>
-                <p><strong>BS in Entertainment Multimedia Computing</strong></p>
-                <p>Major in Game Development</p>
-                <p>Bicol State College of Applied Science Technology</p>
-            </div>
-        </aside>
+    <div class="sidebar-block">
+        <h3>Technical Skills</h3>
+        <div class="skill-container">
+            <span class="skill-badge unity">Unity</span>
+            <span class="skill-badge csharp">C#</span>
+            <span class="skill-badge cpp">C++</span>
+            <span class="skill-badge vfx">Game VFX</span>
+            <span class="skill-badge tools">GitHub</span>
+            <span class="skill-badge tools">Maya</span>
+            <span class="skill-badge tools">Adobe Suite</span>
+        </div>
+    </div>
+    </aside>
 
         <main class="main-content">
             <h2 class="section-title">Featured Projects</h2>
