--- a/index.html
+++ b/index.html
@@ -44,120 +44,120 @@
 
         <main class="main-content">
             <h2 class="section-title">Featured Projects</h2>
-
-            <div class="project-card">
-                <div class="project-gallery">
-                    <div class="slider" id="slider-saldang">
-                        <img src="Image/xwnWfT.png" class="slide active" alt="Saldang Gameplay">
-                        <img src="Image/saldang (1).jpg" class="slide" alt="Saldang Gameplay">
-                        <img src="Image/saldang (2).jpg" class="slide" alt="Saldang Gameplay">
-                        <img src="Image/saldang (3).jpg" class="slide" alt="Saldang Gameplay">
-                        <img src="Image/saldang (4).jpg" class="slide" alt="Saldang Gameplay">
+            <div class="projects-grid">
+                <div class="project-card">
+                    <div class="project-gallery">
+                        <div class="slider" id="slider-saldang">
+                            <img src="Image/xwnWfT.png" class="slide active" alt="Saldang Gameplay">
+                            <img src="Image/saldang (1).jpg" class="slide" alt="Saldang Gameplay">
+                            <img src="Image/saldang (2).jpg" class="slide" alt="Saldang Gameplay">
+                            <img src="Image/saldang (3).jpg" class="slide" alt="Saldang Gameplay">
+                            <img src="Image/saldang (4).jpg" class="slide" alt="Saldang Gameplay">
+                        </div>
+                        <div class="slider-controls">
+                            <button onclick="moveSlide('slider-saldang', -1)">Prev</button>
+                            <button onclick="moveSlide('slider-saldang', 1)">Next</button>
+                        </div>
                     </div>
-                    <div class="slider-controls">
-                        <button onclick="moveSlide('slider-saldang', -1)">Prev</button>
-                        <button onclick="moveSlide('slider-saldang', 1)">Next</button>
+                    <div class="project-info">
+                        <h3>Saldang</h3> 
+                        <p class="genre">2D Action Roguelike</p>
+                        <p class="award">Won 2nd Runner Up in Bicol Myth Game Jam (November 2025)</p>
+                        <p class="desc">I used C# and Unity to build the main gameplay and combat systems. I created the system that handles enemy waves and spawns large numbers of enemies at once.
+                            I also built a power-up system similar to 'Vampire Survivors' to make the game more exciting as you play.</p>
+                        <p class="itch-link">itch.io: <a href="https://itch.io/jam/-mythic-bicol-game-jam-2025/rate/4003600" target="_blank">https://itch.io/saldang</a></p>
                     </div>
                 </div>
-                <div class="project-info">
-                    <h3>Saldang</h3> 
-                    <p class="genre">2D Action Roguelike</p>
-                    <p class="award">Won 2nd Runner Up in Bicol Myth Game Jam (November 2025)</p>
-                    <p class="desc">I used C# and Unity to build the main gameplay and combat systems. I created the system that handles enemy waves and spawns large numbers of enemies at once.
-                         I also built a power-up system similar to 'Vampire Survivors' to make the game more exciting as you play.</p>
-                    <p class="itch-link">itch.io: <a href="https://itch.io/jam/-mythic-bicol-game-jam-2025/rate/4003600" target="_blank">https://itch.io/saldang</a></p>
+
+                <div class="project-card">
+                    <div class="project-gallery">
+                        <div class="slider" id="slider-kupido">
+                            <img src="Image/MR. KUPIDO.png.jpeg" class="slide active" alt="Mr. Kupido Gameplay">
+                            <img src="Image/kupido (1).png" class="slide" alt="Mr. Kupido Gameplay">
+                            <img src="Image/kupido (2).png" class="slide" alt="Mr. Kupido Gameplay">
+                            <img src="Image/kupido (3).png" class="slide" alt="Mr. Kupido Gameplay">
+                            <img src="Image/kupido (4).png" class="slide" alt="Mr. Kupido Gameplay">
+                        </div>
+                        <div class="slider-controls">
+                            <button onclick="moveSlide('slider-kupido', -1)">Prev</button>
+                            <button onclick="moveSlide('slider-kupido', 1)">Next</button>
+                        </div>
+                    </div>
+                    <div class="project-info">
+                        <h3>Mr. Kupido</h3> 
+                        <p class="genre">2D Casual, Puzzle</p>
+                        <p class="award">Top 19 Semi-Finalist for the Young Creatives Challenge (YCC2)</p>
+                        <p class="desc">Its a prototype game our classmates made. I <strong>programmed</strong> most of the gameplay interactive mechanics and I also made the <strong>random NPC generation system</strong> for the puzzle mechanics.</p>
+                    </div>
+                </div>
+
+                <div class="project-card">
+                    <div class="project-gallery">
+                        <div class="slider" id="slider-sort">
+                            <img src="Image/plastic cup.png" class="slide active" alt="Sort-It-Out">
+                            <img src="Image/capstone (1).jpg" class="slide" alt="Sort-It-Out">
+                            <img src="Image/capstone (2).jpg" class="slide" alt="Sort-It-Out">
+                            <img src="Image/capstone (3).jpg" class="slide" alt="Sort-It-Out">
+                            <img src="Image/capstone (4).jpg" class="slide" alt="Sort-It-Out">
+                            <img src="Image/capstone (5).jpg" class="slide" alt="Sort-It-Out">
+                        </div>
+                        <div class="slider-controls">
+                            <button onclick="moveSlide('slider-sort', -1)">Prev</button>
+                            <button onclick="moveSlide('slider-sort', 1)">Next</button>
+                        </div>
+                    </div>
+                    <div class="project-info">
+                        <h3>Sort-It-Out</h3> 
+                        <p class="genre">3D Survival, Exploration</p>
+                        <p class="desc">Developed for <strong>CAPSTONE Project</strong>. This game teaches proper <strong>waste management</strong> through trash sorting and survival mechanics. I implemented the core systems including waste sorting, survival management, and exploration using C# and Unity.</p>
+                    </div>
+                </div>
+
+                <div class="project-card">
+                    <div class="project-gallery">
+                        <div class="slider" id="slider-dragon">
+                            <img src="Image/Chrage.png" class="slide active" alt="Dragon Gears">
+                            <img src="Image/dragon (1).png" class="slide" alt="Dragon Gears">
+                            <img src="Image/dragon (2).png" class="slide" alt="Dragon Gears">
+                            <img src="Image/dragon (3).png" class="slide" alt="Dragon Gears">
+                            <img src="Image/dragon (4).png" class="slide" alt="Dragon Gears">
+                            <img src="Image/dragon (5).png" class="slide" alt="Dragon Gears">
+                        </div>
+                        <div class="slider-controls">
+                            <button onclick="moveSlide('slider-dragon', -1)">Prev</button>
+                            <button onclick="moveSlide('slider-dragon', 1)">Next</button>
+                        </div>
+                    </div>
+                    <div class="project-info">
+                        <h3>Dragon Gears</h3> 
+                        <p class="genre">2D Platformer, Shooter</p>
+                        <p class="desc">A hard shooter platformer game its a <strong>solo project</strong> featuring precision platforming and <strong>difficult bosses</strong>. I developed the game systems including player movement, shooting mechanics, enemy AI, and Boss design.</p>
+                        <p class="itch-link">itch.io: <a href="https://1pcburgersteak.itch.io/dragon-gears" target="_blank">https://itch.io/dragongears</a></p>
+                    </div>
+                </div>
+
+                <div class="project-card">
+                    <div class="project-gallery">
+                        <div class="slider" id="slider-bolz">
+                            <img src="Image/Bolz MiniGame Poster.jpg" class="slide active" alt="Bolz">
+                            <img src="Image/Bolz (4).png" class="slide" alt="Bolz">
+                            <img src="Image/Bolz (3).png" class="slide" alt="Bolz">
+                            <img src="Image/Bolz (2).png" class="slide" alt="Bolz">
+                            <img src="Image/Bolz (1).png" class="slide" alt="Bolz">
+                        </div>
+                        <div class="slider-controls">
+                            <button onclick="moveSlide('slider-bolz', -1)">Prev</button>
+                            <button onclick="moveSlide('slider-bolz', 1)">Next</button>
+                        </div>
+                    </div>
+                    <div class="project-info">
+                        <h3>Bolz</h3> 
+                        <p class="genre">Casual, Arcade</p>
+                        <p class="desc">A <strong>solo developed</strong> game. It is a simple brick breaking game but I added an <strong>upgrade system</strong> and the bricks fall down instead, which makes the game more engaging.</p>
+                        <p class="itch-link">itch.io: <a href="https://1pcburgersteak.itch.io/bolz" target="_blank">https://itch.io/bolz</a></p>
+                    </div>
                 </div>
             </div>
-
-            <div class="project-card">
-                <div class="project-gallery">
-                    <div class="slider" id="slider-kupido">
-                        <img src="Image/MR. KUPIDO.png.jpeg" class="slide active" alt="Mr. Kupido Gameplay">
-                        <img src="Image/kupido (1).png" class="slide" alt="Mr. Kupido Gameplay">
-                        <img src="Image/kupido (2).png" class="slide" alt="Mr. Kupido Gameplay">
-                        <img src="Image/kupido (3).png" class="slide" alt="Mr. Kupido Gameplay">
-                        <img src="Image/kupido (4).png" class="slide" alt="Mr. Kupido Gameplay">
-                    </div>
-                    <div class="slider-controls">
-                        <button onclick="moveSlide('slider-kupido', -1)">Prev</button>
-                        <button onclick="moveSlide('slider-kupido', 1)">Next</button>
-                    </div>
-                </div>
-                <div class="project-info">
-                    <h3>Mr. Kupido</h3> 
-                    <p class="genre">2D Casual, Puzzle</p>
-                    <p class="award">Top 19 Semi-Finalist for the Young Creatives Challenge (YCC2)</p>
-                    <p class="desc">Its a prototype game our classmates made. I <strong>programmed</strong> most of the gameplay interactive mechanics and I also made the <strong>random NPC generation system</strong> for the puzzle mechanics.</p>
-                </div>
-            </div>
-
-            <div class="project-card">
-                <div class="project-gallery">
-                    <div class="slider" id="slider-sort">
-                        <img src="Image/plastic cup.png" class="slide active" alt="Sort-It-Out">
-                        <img src="Image/capstone (1).jpg" class="slide" alt="Sort-It-Out">
-                        <img src="Image/capstone (2).jpg" class="slide" alt="Sort-It-Out">
-                        <img src="Image/capstone (3).jpg" class="slide" alt="Sort-It-Out">
-                        <img src="Image/capstone (4).jpg" class="slide" alt="Sort-It-Out">
-                        <img src="Image/capstone (5).jpg" class="slide" alt="Sort-It-Out">
-                    </div>
-                    <div class="slider-controls">
-                        <button onclick="moveSlide('slider-sort', -1)">Prev</button>
-                        <button onclick="moveSlide('slider-sort', 1)">Next</button>
-                    </div>
-                </div>
-                <div class="project-info">
-                    <h3>Sort-It-Out</h3> 
-                    <p class="genre">3D Survival, Exploration</p>
-                    <p class="desc">Developed for <strong>CAPSTONE Project</strong>. This game teaches proper <strong>waste management</strong> through trash sorting and survival mechanics. I implemented the core systems including waste sorting, survival management, and exploration using C# and Unity.</p>
-                </div>
-            </div>
-
-            <div class="project-card">
-                <div class="project-gallery">
-                    <div class="slider" id="slider-dragon">
-                        <img src="Image/Chrage.png" class="slide active" alt="Dragon Gears">
-                        <img src="Image/dragon (1).png" class="slide" alt="Dragon Gears">
-                        <img src="Image/dragon (2).png" class="slide" alt="Dragon Gears">
-                        <img src="Image/dragon (3).png" class="slide" alt="Dragon Gears">
-                        <img src="Image/dragon (4).png" class="slide" alt="Dragon Gears">
-                        <img src="Image/dragon (5).png" class="slide" alt="Dragon Gears">
-                    </div>
-                    <div class="slider-controls">
-                        <button onclick="moveSlide('slider-dragon', -1)">Prev</button>
-                        <button onclick="moveSlide('slider-dragon', 1)">Next</button>
-                    </div>
-                </div>
-                <div class="project-info">
-                    <h3>Dragon Gears</h3> 
-                    <p class="genre">2D Platformer, Shooter</p>
-                    <p class="desc">A hard shooter platformer game its a <strong>solo project</strong> featuring precision platforming and <strong>difficult bosses</strong>. I developed the game systems including player movement, shooting mechanics, enemy AI, and Boss design.</p>
-                    <p class="itch-link">itch.io: <a href="https://1pcburgersteak.itch.io/dragon-gears" target="_blank">https://itch.io/dragongears</a></p>
-                </div>
-            </div>
-
-            <div class="project-card">
-                <div class="project-gallery">
-                    <div class="slider" id="slider-bolz">
-                        <img src="Image/Bolz MiniGame Poster.jpg" class="slide active" alt="Bolz">
-                        <img src="Image/Bolz (4).png" class="slide" alt="Bolz">
-                        <img src="Image/Bolz (3).png" class="slide" alt="Bolz">
-                        <img src="Image/Bolz (2).png" class="slide" alt="Bolz">
-                        <img src="Image/Bolz (1).png" class="slide" alt="Bolz">
-                    </div>
-                    <div class="slider-controls">
-                        <button onclick="moveSlide('slider-bolz', -1)">Prev</button>
-                        <button onclick="moveSlide('slider-bolz', 1)">Next</button>
-                    </div>
-                </div>
-                <div class="project-info">
-                    <h3>Bolz</h3> 
-                    <p class="genre">Casual, Arcade</p>
-                    <p class="desc">A <strong>solo developed</strong> game. It is a simple brick breaking game but I added an <strong>upgrade system</strong> and the bricks fall down instead, which makes the game more engaging.</p>
-                    <p class="itch-link">itch.io: <a href="https://1pcburgersteak.itch.io/bolz" target="_blank">https://itch.io/bolz</a></p>
-                </div>
-            </div>
-
         </main>
     </div>
 
